<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignInActivity"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar" />

    <ImageView
        android:id="@+id/easyHireLogo"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
    android:layout_below="@id/easyHireLogo"
        android:layout_height="wrap_content"
        android:hint="Email"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/emailInputLayout"
        app:endIconMode="password_toggle"
        android:layout_marginTop="15dp"
        android:hint="Password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signInButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_primary_button"
        android:gravity="center"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Sign in" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:text="Sign Up"
        android:textColor="#1A73E9"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />


</RelativeLayout>