...
    >



    <LinearLayout

        android:id="@+id/helloTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
...
